--- a/_posts/2014-07-15-project-4.markdown
+++ b/_posts/2014-07-15-project-4.markdown
@@ -2,9 +2,9 @@
 layout: default
 modal-id: 4
 date: 2014-07-15
-img: game.png
+img: austin-neill-helicopter-cockpit.jpg
 alt: image-alt
-project-date: April 2014
+project-date: 2018-2019
 client: Luft/Raumfahrt
 category: Projekt Management, Technische Leitung
 description: Leitung eines Internationalen Teams (Remote & Lokal), beauftragt mit der Implementierung der Flugsimulatorsysteme für die Hubschrauber AH125. Verantwortluch für Teamstruktur, Acquise und Projektierung von Arbeitspaketen, Integration beim Kunden, Scrum-Master
