--- a/_posts/2014-07-16-project-3.markdown
+++ b/_posts/2014-07-16-project-3.markdown
@@ -2,10 +2,10 @@
 layout: default
 modal-id: 3
 date: 2014-07-16
-img: circus.png
+img: scott-blake-vermessung.jpg
 alt: image-alt
-project-date: April 2014
-client: Start Bootstrap
-category: Web Development
-description: Use this area of the page to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.
+project-date: 2019-2020
+client: Geodädesie / Vermessung
+category: Embedded Software Development
+description: Implementierung von neuen features (funktionen, konnektivität, datenverarbeitung) für ein computergestütztes Vermessungssystem. Konzeptierung und Implementierung der neuen Framework-Generation für die neue Soft- und Hardware-Basis für die neuen Produktlinien.
 ---
