--- a/_posts/2014-07-18-project-1.markdown
+++ b/_posts/2014-07-18-project-1.markdown
@@ -2,10 +2,10 @@
 layout: default
 modal-id: 1
 date: 2014-07-18
-img: cabin.png
+img: daniel-frank-zahntechnik.jpg
 alt: image-alt
-project-date: April 2014
-client: Start Bootstrap
-category: Web Development
-description: Use this area of the page to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.
+project-date: 2021-2023
+client: Medizintechnik
+category: Software Development
+description: Erstellung der Framework-komponenten für die neue Produktgeneration mit Architektur- und Konzeptwechsel. Die Frameworkkomponenten beinhalten Hardwarehandling, Softwarefeatures, Kommunikations- und Steuerungsinfrastruktur und UI-Elemente
 ---
