--- a/_posts/2014-07-18-project-1.markdown
+++ b/_posts/2014-07-18-project-1.markdown
@@ -3,9 +3,11 @@ layout: default
 modal-id: 1
 date: 2014-07-18
 img: daniel-frank-zahntechnik.jpg
+title_project: "Framework für Zahntechnikgeräte"
 alt: image-alt
 project-date: 2021-2023
 client: Medizintechnik
 category: Software Development
-description: Erstellung der Framework-komponenten für die neue Produktgeneration mit Architektur- und Konzeptwechsel. Die Frameworkkomponenten beinhalten Hardwarehandling, Softwarefeatures, Kommunikations- und Steuerungsinfrastruktur und UI-Elemente
+technology: "C++, Qt, Qml"
+description: Erstellung der Framework-komponenten für die neue Produktgeneration der Zahnersatz-Brennöfen, Fräsen und Drucker mit Architektur- und Konzeptwechsel. Die Frameworkkomponenten beinhalten Hardwarehandling, Softwarefeatures, Kommunikations- und Steuerungsinfrastruktur und UI-Elemente
 ---
