--- a/_posts/2014-07-13-project-6.markdown
+++ b/_posts/2014-07-13-project-6.markdown
@@ -6,8 +6,9 @@ title_project: Flight Simulator System development
 img: phil-w-h145.jpg
 alt: image-alt
 project-date: 2017-2018
-client: Aerospace
+client: aerospace
 category: SW Development
 technology: "C++, Qt, Qml"
-description: Entwicklung von Bestandteilen eines Zertifizierten Flugsimulators für AH145 Hubschrauber. Die Entwicklungsarbeit umfasste das Design und die Implementierung von der Programmlogik und der UI-Elemente, sowie die Entwickung einer eigenen Produktvariante
+description: Development of components of a certified flight simulator for AH145 helicopters. The development work included the design and implementation of the logic components(physics, behavior) and the UI elements, as well as the development of an own product variant.
+[//]: <> (Entwicklung von Bestandteilen eines Zertifizierten Flugsimulators für AH145 Hubschrauber. Die Entwicklungsarbeit umfasste das Design und die Implementierung von der Programmlogik und der UI-Elemente, sowie die Entwickung einer eigenen Produktvariante)
 ---
